--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,19 @@ services:
     build: .
     command: ["./wait-for-it.sh","localhost:9200", "-t", "30", "--", "go", "run", "main.go"]
     volumes:
-      - .:/go/src/TestApp
+      - .:/go/src/github.com/anuragdhingra/elasticsearch-go
     ports:
       - 8080:8080
     depends_on:
       - mysql
+      - elasticsearch
     container_name: golang_app
+
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:6.5.4
+    ports:
+      - 9200:9200
+    container_name: elasticsearch
 
   mysql:
     image: mysql:5
